--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aurora Infotech</title>
+  <title>Directory.com</title>
   <base href="/">
   <!-- script for the facebook api -->
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
